# assemblist

./: .gitignore  Cargo.toml  README.md
asserts/: Cargo.toml
asserts/src/: lib.rs
src/: flattening.rs  fn_tree.rs  item_tree.rs  lib.rs  parsing.rs  prelude.rs  sequentialization.rs  signature.rs  transformation.rs  tree.rs  types.rs
src/concepts/: deck.rs  fn_tree.rs  item_tree.rs  mod.rs  prelude.rs  signature.rs
src/flattening/: chain.rs  chains.rs  doc.rs  flattener.rs  flattening.rs  generics.rs  inter_method.rs  method.rs  methods.rs  mod.rs  module.rs  ordered_gens.rs  output.rs  prelude.rs  root_impl.rs  steps.rs  tree.rs  trunk.rs  trunk_browser.rs  trunk_browsing.rs  usual_args.rs
src/model/: attribute.rs  branch.rs  chained_section.rs  mod.rs  prelude.rs  section.rs  tree.rs  trunk.rs
src/parsing/: common.rs  fn_def.rs  fn_tree.rs  generic_arg.rs  item_tree.rs  mod.rs
src/tools/: asserts.rs  cumulative.rs  joining_spans.rs  localized_failure.rs  mod.rs
tests/: assemblist_tests.rs  assemblists_test.rc  assemblists_test.rs  combination_test.rs  construction_test.rs  implementation_test.rs  prelude_test.rs  wrapping_test.rs
