[package]
name = "assemblist"
authors = ["Eddy Cizeron <eddy.cizeron@msn.com>"]
version = "0.1.1"
edition = "2021"
license = "MIT"
keywords = ["builder", "macro"]
categories = ["rust-patterns"]
description = "Define your builder patterns as you use them."
repository = "https://github.com/contactomorph/assemblist"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
"syn" = { version = "2.0", features = ["full"]}
"quote" = "1.0"
"proc-macro2" = "1.0"

[dev-dependencies]
"futures" = { version = "0.3" }
"tokio" = { version = "1.44", features = ["time", "rt", "macros"] }